tests/local/id.wast
(assert_malformed
  (module quote
    "(func $)")
  "empty identifier")
